--- a/test01_index.html
+++ b/test01_index.html
@@ -9,6 +9,7 @@
         h1 { font-size: 24px; }
         .container { max-width: 400px; margin: auto; }
         .option { display: flex; align-items: center; margin: 5px 0; }
+        input[type="checkbox"] { margin-right: 10px; }
     </style>
 </head>
 <body>
