--- a/test01_index.html
+++ b/test01_index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>チェックリスト</title>
+    <title>Test Checklist Page</title>
     <style>
-        body { font-family: Arial, sans-serif; padding: 20px; }
-        h1 { font-size: 24px; }
+        body { font-family: Arial, sans-serif; padding: 20px; text-align: center; }
         .container { max-width: 400px; margin: auto; }
-        .option { display: flex; align-items: center; margin: 5px 0; }
+        .option { display: flex; align-items: center; justify-content: left; margin: 5px 0; }
         input[type="checkbox"] { margin-right: 10px; }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>TEST Question</h1>
+        <h1>Test Checklist Page</h1>
         <label class="option"><input type="checkbox"> Option 1</label>
         <label class="option"><input type="checkbox"> Option 2</label>
         <label class="option"><input type="checkbox"> Option 3</label>
