--- a/index.html
+++ b/index.html
@@ -7,23 +7,26 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            font-size: 12px; /* 文字サイズを小さく */
             text-align: left; /* 左揃え */
-            margin: 20px;
+            margin: 10px; /* 余白を縮小 */
         }
         h2 {
             border-bottom: 2px solid #000;
-            padding-bottom: 5px;
-            text-align: left; /* 左揃え */
+            padding-bottom: 3px;
+            text-align: left;
+            font-size: 14px; /* 見出しも少し小さく */
         }
         .checklist {
             list-style: none;
-            padding-left: 0;
+            padding-left: 5px;
         }
         .checklist li {
-            margin: 5px 0;
+            margin: 3px 0; /* 項目間の余白を減らす */
         }
         .checklist input {
-            margin-right: 10px;
+            margin-right: 5px;
+            transform: scale(0.8); /* チェックボックスを小さく */
         }
     </style>
 </head>
