--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         <li><input type="checkbox"> PhotoCube、クラウドではなく物理的の説明</li>
         <li><input type="checkbox"> ワイチャやPhotoCube既に持っていないか</li>
         <li><input type="checkbox"> PhotoCube対応端末か</li>
+        <li><input type="checkbox"> ルミエラあるか</li>
+        <li><input type="checkbox"> 頭金、Home5G、ChrmBも</li>
     </ul>
 
     <h2>引継ぎ</h2>
